--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "chai": "^3.4.1",
     "chai-as-promised": "^5.2.0",
     "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.7.0",
+    "grunt-contrib-compress": "^0.14.0",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-jscs": "^2.5.0",
     "grunt-jsonlint": "^1.0.7",
